# acr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  SPEC.md  dist-workspace.toml  release-please-config.json  renovate.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml
src/: atcoder.rs  browser.rs  cli.rs  config.rs  error.rs  launcher.rs  main.rs  runner.rs  types.rs  workspace.rs
src/atcoder/: auth.rs  client.rs  contest.rs  scraper.rs  submit.rs
src/commands/: add.rs  config.rs  init.rs  mod.rs  new.rs  open.rs  session.rs  submissions.rs  submit.rs  template.rs  test.rs  update.rs  view.rs  virtual_contest.rs  workspace_launcher.rs
src/config/: global.rs  session.rs
src/runner/: tester.rs
src/workspace/: generator.rs  testcase.rs
