[package]
name = "acr-cli"
version = "0.4.1"
edition = "2024"
description = "A CLI tool for AtCoder competitive programming in Rust"
license = "MIT"
repository = "https://github.com/t-seki/acr"
readme = "README.md"
keywords = ["atcoder", "competitive", "procon", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "acr"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP + scraping
reqwest = { version = "0.12", features = ["cookies", "json"] }
scraper = "0.20"

# async
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# error handling
anyhow = "1"
thiserror = "2"

# terminal
colored = "2"
indicatif = "0.17"

# clipboard
arboard = "3"

# utility
dirs = "5"
chrono = "0.4"
shlex = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
