[package]
name = "acr-cli"
version = "0.7.0"
edition = "2024"
description = "A CLI tool for AtCoder competitive programming in Rust"
license = "MIT"
homepage = "https://github.com/t-seki/acr"
repository = "https://github.com/t-seki/acr"
readme = "README.md"
keywords = ["atcoder", "competitive", "procon", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "acr"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP + scraping
reqwest = { version = "0.13", features = ["cookies", "json"] }
scraper = "0.26"

# async
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# error handling
anyhow = "1"
thiserror = "2"

# terminal
colored = "3"
indicatif = "0.18"

# clipboard
arboard = "3"

# utility
dirs = "6"
chrono = "0.4"
shlex = "1"

[dev-dependencies]
tempfile = "=3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
